--- a/src/styles.css
+++ b/src/styles.css
@@ -74,6 +74,10 @@ body {
   width: 34px;
 }
 
+.square-winner{
+  border: 4px solid green
+}
+
 .board-row:after {
   clear: both;
   content: '';
@@ -82,6 +86,11 @@ body {
 
 .status {
   margin-bottom: 10px;
+}
+
+.final-status{
+  color: green;
+  font-weight: 700;
 }
 .game {
   display: flex;
