--- a/src/styles.css
+++ b/src/styles.css
@@ -65,13 +65,13 @@ body {
   float: left;
   font-size: 24px;
   font-weight: bold;
-  line-height: 34px;
-  height: 34px;
+  line-height: 50px;
+  height: 50px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 50px;
 }
 
 .square-winner{
@@ -99,4 +99,9 @@ body {
 
 .game-info {
   margin-left: 20px;
+}
+
+.App{
+  display: flex;
+  justify-content: center;
 }
